--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,32 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+  deploy:
+    machine:
+      enabled: true
 
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "97:1f:10:0a:6a:47:43:23:0e:58:3a:26:f6:71:c4:a2"
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/heyjiani/scheduler.git master:production
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
